<resources>
    <string name="app_name">management-app</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="school_array">
        <item>PHINMA URDANETACITY</item>
        <item>UPANG DAGUPAN</item>
        <item>MISYUBIBI</item>
    </string-array>
    <string name="details"><u>Click hereto see details.</u></string>
    <string name="aerial_view"><b>AERIAL VIEW</b></string>
    <string name="street_view"><b>STREET VIEW</b></string>
    <string name="flex_learning"><b><big>FLEX LEARNING</big></b>
        \n <li>Both Distance Learning + Face-to-Face Sessions</li>
        \n <li>Teacher support will be provided via calls, texts, or social media</li>
        \n <li>6-8 subjects in 1 semester</li>
    </string>
    <string name="facetoface_learning_description"><b>Face-to-Face</b> learning at<b> PHINMA University of Pangasinan </b>(UPANG) is the traditional, in-person approach to education, where students and instructors interact directly within the classroom environment. This method emphasizes personal engagement, immediate feedback, and a structured learning experience, fostering a vibrant academic community.</string>
    <string name="facetoface1"><b>Direct Interaction:</b> Students benefit from real-time, face-to-face interactions with instructors and peers. This direct engagement facilitates immediate clarification of doubts, dynamic discussions, and personalized feedback.</string>
    <string name="facetoface2"><b>Structured Environment:</b> The physical classroom provides a structured setting that supports discipline and focus. Scheduled classes and a fixed timetable help students manage their time effectively and maintain a consistent study routine.</string>
    <string name="facetoface3"><b>Hands-On Learning:</b> Face-to-Face learning at PHINMA UPANG emphasizes experiential learning through lab sessions, workshops, and practical exercises. This hands-on approach is particularly beneficial for courses requiring physical demonstration and practice.</string>
    <string name="facetoface4"><b>Community Building:</b> In-person classes foster a sense of community and camaraderie among students. Social interactions, group projects, and extracurricular activities build strong relationships and enhance collaborative skills.</string>
    <string name="facetoface5"><b>Immediate Feedback:</b> Instructors can provide instant feedback and support during class. This immediate response helps students correct mistakes, understand concepts better, and stay engaged with the material.</string>
    <string name="facetoface6"><b>Enhanced Communication Skills:</b> Face-to-Face learning develops essential communication skills. Students practice public speaking, active listening, and interpersonal communication, which are crucial for personal and professional success.</string>
    <string name="facetoface7"><b>Resource Accessibility:</b> On-campus resources, including libraries, labs, and study spaces, are readily available to students. Access to these facilities supports research, experimentation, and group study sessions.</string>
    <string name="facetoface8"><b>Extracurricular Opportunities:</b> Students can participate in various on-campus activities, clubs, and organizations. These opportunities enrich the university experience, promoting personal growth and leadership development.</string>
    <string name="facetoface9"><b>Cultural and Social Exposure:</b> In-person learning exposes students to diverse perspectives and cultures through direct interaction with classmates and faculty. This exposure broadens their understanding and appreciation of different viewpoints.</string>
    <string name="facetoface10"><b>Health and Safety Measures:</b> PHINMA UPANG ensures a safe learning environment by implementing health and safety protocols. These measures include regular sanitation, social distancing, and health monitoring to protect the well-being of students and staff.</string>
    <string name="hkb_description"><b>The 50% Hawak Kamay (HK) Scholarship at PHINMA University of Pangasinan (PHINMA UPANG)</b> is a generous financial aid program designed to support academically promising and financially needy students. This scholarship provides a 50% reduction in tuition fees, significantly easing the financial burden on students and their families. PHINMA UPANG, committed to making quality education accessible to more students, offers the HK Scholarship to help deserving individuals achieve their academic and career aspirations.</string>
    <string name="hkc1"><b>Benefits of the 75% Hawak Kamay (HK) Scholarship</b></string>
    <string name="hkc2"><b>Major Financial Relief:</b> With a 75% discount on tuition fees, the scholarship greatly reduces the cost of education, making it much more affordable for students and their families.</string>
    <string name="hkc3"><b>Access to Quality Education:</b> The scholarship allows more students to benefit from the high-quality education, resources, and facilities offered by PHINMA UPANG, enhancing their academic experience and future career opportunities.</string>
    <string name="hkc4"><b>Encouragement of Academic Excellence:</b> Financial support through the HK Scholarship incentivizes students to maintain high academic standards, fostering a culture of excellence and perseverance.</string>
    <string name="hkc5"><b>Broader Educational Opportunities:</b> The significant reduction in tuition fees enables students to allocate funds to other essential needs such as textbooks, transportation, and living expenses, enriching their educational journey.</string>
    <string name="hkc6"><b>Support for Deserving Students:</b> The HK Scholarship specifically targets students who demonstrate academic potential and financial need, ensuring that those who deserve support receive it.</string>
    <string name="hkc7"><b>Community and Peer Support:</b> Scholarship recipients often become more engaged in campus activities, contributing to a supportive and vibrant university community.</string>
    <string name="hkc8"><b>Long-Term Impact:</b> By investing in students education, PHINMA UPANG helps develop skilled professionals who can positively impact their communities and contribute to national development.</string>
    <string name="hkc9"><b>Reduction of Financial Stress:</b> With a large portion of the tuition fee covered, students can focus more on their studies and personal growth rather than worrying about financial constraints.</string>
    <string name="hkc10"><b>Empowerment and Confidence:</b> Receiving such a significant scholarship boosts students confidence and self-esteem, empowering them to pursue their goals with greater determination and resilience.</string>
    <string name="hkc11"><b>Enhanced Career Prospects:</b> Graduates of PHINMA UPANG who benefit from the HK Scholarship are better positioned to excel in their chosen careers, having received a solid educational foundation with less financial strain.</string>
    <string name="hkc12"><b>The 75% Hawak Kamay (HK) Scholarship is a crucial part of PHINMA UPANG’s commitment to providing accessible and affordable education, empowering students to reach their full potential and make meaningful contributions to society.</b></string>
    <string name="hkd_description"><b>The 100% Hawak Kamay (HK) Student Assistant (SA) Scholarship at PHINMA University of Pangasinan (PHINMA UPANG)</b> is a prestigious financial aid program designed for academically talented and financially disadvantaged students. This scholarship offers a full 100% reduction in tuition fees in exchange for students participating in a student assistantship program. By combining financial aid with practical work experience, the HK SA Scholarship aims to develop well-rounded individuals prepared for both academic and professional success.</string>
    <string name="hkd1"><b>Benefits of the 100% Hawak Kaway (HK) Student Assistant (SA) Scholarship</b></string>
    <string name="hkd2"><b>Complete Financial Coverage:</b> The scholarship covers 100% of tuition fees, completely eliminating the financial burden of education and making it accessible for students from all financial backgrounds.</string>
    <string name="hkd3"><b>Work Experience and Skill Development:</b> As part of the student assistantship program, students gain valuable work experience, developing essential skills such as time management, teamwork, and problem-solving.</string>
    <string name="hkd4"><b>Access to Quality Education:</b> The scholarship allows recipients to benefit from the high-quality education, resources, and facilities provided by PHINMA UPANG, enhancing their learning experience and future career opportunities.</string>
    <string name="hkd5"><b>Encouragement of Academic Excellence:</b> With full financial support, students are motivated to maintain high academic standards and focus on their studies without the distraction of financial concerns.</string>
    <string name="hkd6"><b>Holistic Development:</b> The combination of academic and practical work experience fosters the holistic development of students, preparing them for the challenges of the professional world.</string>
    <string name="hkd7"><b>Support for Deserving Students:</b> The HK SA Scholarship targets students who demonstrate academic potential and financial need, ensuring that those who are most deserving receive the support they need to succeed.</string>
    <string name="hkd8"><b>Community and Peer Engagement:</b> Scholarship recipients often become more involved in campus activities and contribute to a supportive and vibrant university community.</string>
    <string name="hkd9"><b>Long-Term Career Benefits:</b> The work experience gained through the student assistantship program enhances students resumes, making them more competitive in the job market and better prepared for their chosen careers.</string>
    <string name="hkd10"><b>Reduction of Financial Stress:</b> With the full tuition fee covered, students can focus more on their studies and personal growth rather than worrying about financial constraints.</string>
    <string name="hkd11"><b>Empowerment and Confidence:</b> Receiving a full scholarship boosts students confidence and self-esteem, empowering them to pursue their goals with greater determination and resilience.</string>
    <string name="hkd12"><b>Networking Opportunities:</b> Working as a student assistant provides opportunities to build professional networks within the university, which can be beneficial for future career prospects.</string>
    <string name="hkd13"><b>The 100% Hawak Kamay (HK) Student Assistant (SA) Scholarship is an integral part of PHINMA UPANG’s commitment to providing accessible, affordable, and high-quality education. This scholarship not only alleviates financial burdens but also equips students with practical skills and experiences, empowering them to achieve their full potential and make meaningful contributions to society.</b></string>
    <string name="cite"><b>Bachelor of Science in Information Technology</b></string>
    <string name="cite1">The Bachelor of Science in Information Technology program provides students with skills and knowledge needed in relevant emerging high-growth areas in the industry. Through our program, we train students with the development and management of contemporary areas such as cloud computing and applications, analytics and data science, artificial intelligence, and the Internet of Things. We use a curriculum based on inputs and guidance from practicing industry experts.</string>
</resources>