<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".cite">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/linearlayout14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/phinmalogo" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout14"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            app:cardElevation="50dp"
            app:cardMaxElevation="10dp"
            app:cardCornerRadius="30dp">

            <ImageButton
                android:id="@+id/cite"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/cite"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/details"
                android:gravity="center|bottom"
                android:textSize="17dp"
                android:layout_marginBottom="5dp"/>

        </androidx.cardview.widget.CardView>

            <TextView
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cite"/>

            <TextView

                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cite1"/>

            <Button
                android:id="@+id/citebtn"
                android:text="See more course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>